--- a/app/src/main/res/layout/activity_atgc.xml
+++ b/app/src/main/res/layout/activity_atgc.xml
@@ -8,7 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".ATGCActivity">
 
         <Button
             android:id="@+id/upload_file"
@@ -17,18 +17,18 @@
             android:text="@string/upload_file"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/SubmitButtonFile"
-            app:layout_constraintTop_toBottomOf="@id/connect"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/textView3"/>
 
-        <Button
-            android:id="@+id/connect"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/connect_to_server"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/upload_file" />
+<!--        <Button-->
+<!--            android:id="@+id/connect"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="@string/connect_to_server"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintBottom_toTopOf="@+id/upload_file" />-->
 
         <TextView
             android:id="@+id/NumG"
@@ -188,7 +188,7 @@
             android:text="Submit File"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/upload_file"
-            app:layout_constraintTop_toBottomOf="@id/connect"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/textView3" />
 
         <TextView
