--- a/app/src/main/res/layout/activity_gc_percent.xml
+++ b/app/src/main/res/layout/activity_gc_percent.xml
@@ -8,7 +8,19 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ATGCActivity">
+        tools:context=".GC_percentActivity">
+
+        <TextView
+            android:id="@+id/textGC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="GC Percent Calculator"
+            android:textColor="#000000"
+            android:textSize="34sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/upload_file"
@@ -17,52 +29,8 @@
             android:text="@string/upload_file"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/SubmitButtonFile"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textGC"
             app:layout_constraintBottom_toTopOf="@id/textView3"/>
-
-        <TextView
-            android:id="@+id/NumG"
-            android:layout_width="168dp"
-            android:layout_height="42dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="12dp"
-            android:ems="10"
-            android:hint="G"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/NumA" />
-
-        <TextView
-            android:id="@+id/NumC"
-            android:layout_width="168dp"
-            android:layout_height="42dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="30dp"
-            android:ems="10"
-            android:hint="C"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/NumT" />
-
-        <TextView
-            android:id="@+id/FreqG"
-            android:layout_width="168dp"
-            android:layout_height="42dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="12dp"
-            android:ems="10"
-            android:hint="G"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/FreqA" />
-
-        <TextView
-            android:id="@+id/NumT"
-            android:layout_width="168dp"
-            android:layout_height="42dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="30dp"
-            android:ems="10"
-            android:hint="T"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <TextView
             android:id="@+id/textView"
@@ -70,69 +38,35 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginTop="250dp"
-            android:text="Number"
+            android:text="Result"
             android:textColor="#000000"
             android:textSize="34sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="35dp"
-            android:text="Frequency"
-            android:textColor="#000000"
-            android:textSize="34sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="12dp"
+            android:text="_________________"
+            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView" />
 
         <TextView
-            android:id="@+id/NumA"
-            android:layout_width="168dp"
-            android:layout_height="42dp"
-            android:layout_marginStart="30dp"
+            android:id="@+id/result_per"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="12dp"
-            android:ems="10"
-            android:hint="A"
-            android:selectAllOnFocus="true"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="%"
+            android:textColor="@color/black"
+            app:layout_constraintStart_toEndOf="@id/result"
             app:layout_constraintTop_toBottomOf="@id/textView" />
 
-        <TextView
-            android:id="@+id/FreqA"
-            android:layout_width="168dp"
-            android:layout_height="42dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="12dp"
-            android:ems="10"
-            android:hint="A"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView2" />
-
-        <TextView
-            android:id="@+id/FreqC"
-            android:layout_width="168dp"
-            android:layout_height="42dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="30dp"
-            android:ems="10"
-            android:hint="C"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/FreqT" />
-
-        <TextView
-            android:id="@+id/FreqT"
-            android:layout_width="168dp"
-            android:layout_height="42dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="30dp"
-            android:ems="10"
-            android:hint="T"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView2" />
 
         <EditText
             android:id="@+id/editATGC"
@@ -178,7 +112,7 @@
             android:text="Submit File"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/upload_file"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textGC"
             app:layout_constraintBottom_toTopOf="@id/textView3" />
 
         <TextView
@@ -186,10 +120,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
+            android:layout_marginTop="100dp"
             android:textColor="#FF0000"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/NumG"
-            app:layout_constraintBottom_toTopOf="@id/textView2"/>
+            app:layout_constraintTop_toBottomOf="@id/result" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
